--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://khafiz12.github.io/portfolio-app",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -40,6 +42,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
-  },
-"homepage": "https://khafiz12.github.io/portfolio-app"
+  }
 }
